elastic-yaml/es003-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\bin\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: es003
  name: es003
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: es003
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\bin\kompose.exe convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/elastic: "true"
        io.kompose.service: es003
    spec:
      containers:
        - env:
            - name: ES_JAVA_OPTS
              value: -Xmx2048m  -Xms2048m
            - name: bootstrap.memory_lock
              value: "true"
            - name: cluster.initial_master_nodes
              value: es001,es002,es003
            - name: cluster.name
              value: es-docker-cluster
            - name: discovery.seed_hosts
              value: es001,es002
            - name: node.name
              value: es003
          image: elasticsearch:7.10.1
          name: es003
          resources: {}
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: data03
      restartPolicy: Always
      volumes:
        - name: data03
          persistentVolumeClaim:
            claimName: data03
status: {}
