elastic-yaml/elastic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elastic-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: api.elasticsearch.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: es001
                port:
                  number:  9200
